--- a/api/php-fpm/Dockerfile
+++ b/api/php-fpm/Dockerfile
@@ -1,5 +1,5 @@
 FROM php:8.1-fpm
 
-RUN apt-get update && apt-get install -y libpq-dev && docker-php-ext-install pdo pdo_pgsql
+RUN apt-get update && apt-get install -y git libpq-dev unzip && docker-php-ext-install pdo pdo_pgsql
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
